--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ import dependencies.Application
 import dependencies.Dependencies
 import dependencies.Java
 import dependencies.AndroidTestDependencies
+import dependencies.AnnotationProcessing
 
 
 apply plugin: 'com.android.application'
@@ -54,6 +55,17 @@ dependencies {
     implementation Dependencies.kotlin_reflect
     implementation Dependencies.ktx
 
+    // dependencies
+    implementation Dependencies.dagger
+    implementation Dependencies.firebase_firestore
+    implementation Dependencies.firebase_analytics
+    implementation Dependencies.firebase_auth
+    implementation Dependencies.firebase_crashlytics
+
+    // Annotation Processing
+    kapt AnnotationProcessing.dagger_compiler
+
+    // Support
     implementation SupportDependencies.appcompat
     implementation SupportDependencies.constraintlayout
     implementation SupportDependencies.material_design
